--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rpc_exceptions
 description: A collection of handy Exceptions for JSON-RPC implementation.
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/jwashin/rpc_exceptions
 
 environment:
   sdk: '>=2.12.0 <3.0.0'
